--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-    "name": "sistema-orcamento",
+    "name": "template-javascript",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
     "scripts": {
         "lint": "./node_modules/.bin/eslint src/*.js",
         "prepush": "npm run lint",
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "./node_modules/.bin/mocha tests/**/*.spec.js ",
         "build": "./node_modules/.bin/webpack --colors --progress",
-        "watch": "npm run build -- -- watch"
+        "watch": "npm run build -- -- watch",
+        "server": "./node_modules/.bin/webpack-dev-server --inline --open"
     },
     "repository": {
         "type": "git",
@@ -23,12 +24,20 @@
     "devDependencies": {
         "@babel/plugin-transform-runtime": "^7.5.5",
         "babel": "^6.23.0",
+        "@babel/core": "^7.5.5",
+        "@babel/preset-env": "^7.5.5",
+        "babel-loader": "^8.0.6",
+        "babel-preset-env": "^1.7.0",
         "eslint": "^6.3.0",
         "eslint-config-airbnb-base": "^14.0.0",
         "eslint-plugin-import": "^2.18.2",
         "husky": "^3.0.4",
         "webpack": "^4.39.2",
-        "webpack-cli": "^3.3.7"
+        "webpack-cli": "^3.3.7",
+        "chai": "^4.2.0",
+        "mocha": "^6.2.0",
+        "uglifyjs-webpack-plugin": "^2.2.0",
+        "webpack-dev-server": "^3.8.0"
     },
     "dependencies": {
         "@babel/runtime": "^7.5.5",
