--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
         "test": "./node_modules/.bin/mocha tests/**/*.spec.js ",
         "build": "./node_modules/.bin/webpack --colors --progress",
         "watch": "npm run build -- -- watch",
-        "server": "./node_modules/.bin/webpack-dev-server --inline --open"
+        "server": "./node_modules/.bin/webpack-dev-server --inline --open",
+        "build:watch": "webpack -w --mode development",
+        "build:prod": "webpack --mode production"
     },
     "repository": {
         "type": "git",
@@ -22,21 +24,21 @@
     },
     "homepage": "https://github.com/msitoni/Template-NodeJS-01#readme",
     "devDependencies": {
-        "@babel/plugin-transform-runtime": "^7.5.5",
-        "babel": "^6.23.0",
         "@babel/core": "^7.5.5",
+        "@babel/plugin-transform-runtime": "^7.5.5",
         "@babel/preset-env": "^7.5.5",
+        "babel": "^6.23.0",
         "babel-loader": "^8.0.6",
         "babel-preset-env": "^1.7.0",
+        "chai": "^4.2.0",
         "eslint": "^6.3.0",
         "eslint-config-airbnb-base": "^14.0.0",
         "eslint-plugin-import": "^2.18.2",
         "husky": "^3.0.4",
-        "webpack": "^4.39.2",
-        "webpack-cli": "^3.3.7",
-        "chai": "^4.2.0",
         "mocha": "^6.2.0",
         "uglifyjs-webpack-plugin": "^2.2.0",
+        "webpack": "^4.39.3",
+        "webpack-cli": "^3.3.8",
         "webpack-dev-server": "^3.8.0"
     },
     "dependencies": {
