--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "lint": "./node_modules/.bin/eslint src/*.js",
-        "prepush": "npm run lint",
+        "prepush": "npm run lint && npm run test:coverage",
         "test": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register",
         "build": "./node_modules/.bin/webpack --colors --progress",
         "watch": "npm run build -- --watch",
@@ -16,7 +16,12 @@
         "scss-mobile": "node-sass -watch src/client/mobile/scss -o dist/css",
         "test:tdd": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register --watch",
         "test:coverage": "nyc npm test"
-
+    },
+    "nyc": {
+        "functions": 80,
+        "lines": 80,
+        "reporter": ["text", "html"],
+        "exclude": ["tests/**"]
     },
     "repository": {
         "type": "git",
