--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
     "name": "template-javascript",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
+    "main": "src/index.js",
     "scripts": {
+        "clear": "rimraf lib",
         "lint": "./node_modules/.bin/eslint src/*.js",
         "prepush": "npm run lint && npm run test:coverage",
         "test": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register",
         "build": "./node_modules/.bin/webpack --colors --progress",
+        "compilar": "./node_modules/.bin/babel --out-dir lib src",
+        "build:babel": "npm run clear && npm run compilar",
         "watch": "npm run build -- --watch",
         "server": "./node_modules/.bin/webpack-dev-server --inline --open",
         "build:watch": "webpack -w --mode development",
@@ -43,6 +46,7 @@
         "@babel/plugin-transform-runtime": "^7.5.5",
         "@babel/preset-env": "^7.5.5",
         "babel": "^6.23.0",
+        "babel-cli": "^6.26.0",
         "babel-loader": "^8.0.6",
         "babel-preset-env": "^1.7.0",
         "babel-register": "^6.24.0",
@@ -55,6 +59,8 @@
         "node-fetch": "^2.6.0",
         "node-sass": "^4.12.0",
         "nyc": "^14.1.1",
+        "rimraf": "^3.0.0",
+        "sinon": "^7.4.2",
         "sinon-chai": "^3.3.0",
         "sinon-stub-promise": "^4.0.0",
         "uglifyjs-webpack-plugin": "^2.2.0",
