--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "babel-preset-env": "^1.7.0",
         "babel-register": "^6.24.0",
         "chai": "^4.2.0",
+        "editorconfig": "^0.15.3",
         "eslint": "^6.3.0",
         "eslint-config-airbnb-base": "^14.0.0",
         "eslint-plugin-import": "^2.18.2",
